--- a/src/App.css
+++ b/src/App.css
@@ -11,14 +11,16 @@
   --bg-color: #f5f5f5;
   --bg-gradient: linear-gradient(
     105deg,
-    rgba (184, 283, 237, 1) 0%,
-    rgba (222, 245, 221, 1) 100%
+    rgb(233, 11, 59) 0%,
+    rgb(61, 3, 88) 50%,
+    rgb(8, 0, 44) 100%
   );
 
   --bg-border: linear-gradient(
     90deg,
-    rgba (124, 166, 252, 1) 0%,
-    rgba (119, 235, 229, 1) 100%
+    rgb(210, 183, 189) 0%,
+    rgb(147, 96, 170) 50%,
+    rgb(192, 185, 224) 100%
   );
 }
 
