--- a/src/components/Header.module.css
+++ b/src/components/Header.module.css
@@ -5,6 +5,7 @@
     padding: 10px;
     place-items: center;
     background: var(--bg-gradient);
+    box-shadow: 0 0 10px rgba(0,0,0,0.3);
 
 }
 
@@ -16,6 +17,18 @@
     border: none;
     width: 80vw;
     color: #ffffff;
+    box-shadow: 0 0 10px rgba(0,0,0,0.3);
+    font-style: oblique;
+}
+
+input:focus{
+    outline: none;
+
+}
+
+input::placeholder{
+    color: lightsalmon;
+    font-style:normal;
 }
 
 
