--- a/src/components/Menu.module.css
+++ b/src/components/Menu.module.css
@@ -5,6 +5,7 @@
     justify-content: space-around;
     width:100%;
     box-shadow: 0 0 10px rgba(0,0,0,0.3);
+
     /* position: fixed;
     bottom: 0;
     left: 0;
@@ -21,6 +22,7 @@
     color: lightsalmon;
     font-size: 12px;
     margin: 10px 0;
+   
 }
 
 .menuLink:hover {
@@ -31,13 +33,15 @@
 .menuIcon {
     width: 30px;
     height: 30px;
-    margin-bottom: 5px;
+    margin: 5px;
+    box-sizing: border-box;
+    padding: 1px;
 }
 
 .menuIcon:hover {
     width: 35px;
     height: 35px;
-    margin-bottom: 0px;
-
-    
+    margin: 0;
+    box-sizing: border-box;
+    padding: 0;
 }
