--- a/src/components/Menu.module.css
+++ b/src/components/Menu.module.css
@@ -2,46 +2,40 @@
     padding: 10px;
     background: var(--bg-gradient);
     display: flex;
-    justify-content: space-around;
+    justify-content:space-around;
     width:100%;
-    box-shadow: 0 0 10px rgba(0,0,0,0.3);
-
-    /* position: fixed;
-    bottom: 0;
-    left: 0;
-    z-index: 1; */
-    
+    overflow: hidden;
+    object-fit: contain;
+    position: relative;
+    bottom: 0%;
 }
 
 .menuLink {
-    display: flex;
-    flex-direction: column;
     align-items: center;
     text-align: center;
     text-decoration: none;
+    transition: background-color 0.3s ease-in-out;
     color: lightsalmon;
-    font-size: 12px;
-    margin: 10px 0;
-   
+    display: flex;
+    flex-direction: column;
+    margin: 5px;
+    filter: grayscale(40%)
 }
 
 .menuLink:hover {
-    color: #ffffff;
-    font-size: 11.5px;
+    color: rgb(253, 207, 188);
+    object-fit: scale-down;
+    font-style: bold;
+    filter: grayscale(0%)
 }
 
 .menuIcon {
     width: 30px;
-    height: 30px;
-    margin: 5px;
-    box-sizing: border-box;
-    padding: 1px;
+    height: 30px
 }
 
 .menuIcon:hover {
-    width: 35px;
-    height: 35px;
-    margin: 0;
-    box-sizing: border-box;
-    padding: 0;
+    color: #ffffff;
+    object-fit: scale-down;
+    opacity: 100%;
 }
